--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -1,5 +1,4 @@
-s1=Hot Pot
-s2=Sichuan Pork
-s3=Braised Pork Balls in Gravy
-s4=Shrimp vermicelli
-name=name
+msg_greeting=Hello !!
+msg_name=Nikhil
+msg_surname=Kumar
+msg_location=At home
