--- a/src/main/resources/lang/message_it.properties
+++ b/src/main/resources/lang/message_it.properties
@@ -1,5 +1,4 @@
-s1=Pentola calda
-s2=Maiale del Sichuan
-s3=Polpette di maiale brasate in salsa
-s4=Vermicelli di gamberi
-s5=nome
+msg_greeting=Ciao !!
+msg_name=Nichil
+msg_surname=Kumar
+msg_location=a casa
